test/fail_compilation/fail272.d
template Ins(alias x) { const Ins = Ins!(Ins); }
alias Ins!(Ins) x;
